--- a/assets/custom/css/style.css
+++ b/assets/custom/css/style.css
@@ -9,22 +9,32 @@
     background-color: #212121 !important;
 }
 
-
+/* 
 .container-application {
     padding-left: 30px !important;
+} */
+
+.sidenav-header .navbar-brand,
+.sidenav-user {
+    padding-left: 65px;
+    padding-right: 20px;
 }
 
 
 /*------Application Side Navbar add scroll-----*/
 
 .side-nav-application {
-    height: 400px;
-    width: 280px;
+    height: 420px !important;
+    width: 100% !important;
+    padding-top: 20px !important;
+    padding-left: 3px !important;
     overflow-y: scroll !important;
+    background-color: #ccd1da !important;
+
 }
 
 .page-content {
-    height: 750px;
+    height: 770px;
     padding-right: 50px !important;
     padding-left: 40px !important;
     overflow-y: scroll;
@@ -71,21 +81,60 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-.side-nav-application ul li {
-    list-style-type: none;
-    height: 80px;
-    width: 80px;
-    color: white;
-    background-color: #6e00ff;
-    display: inline-block;
+/*-------------Left Sidebar------------*/
+
+.nav-application .left-sidbar {
+    width: 55%;
+    border-right: 2px solid #9ca0a6 !important;
 }
 
 
-.side-nav-application .sub-side-menu {
-    display: none;
-    position: absolute;
-    z-index: 10;
-    left: 350px;
-    top: 460px;
-    background-color: #6e00ff;
+/*----------Menu Sidebar---------------*/
+.nav-application .menu-sidebar {
+    width: 45%;
+}
+
+
+.application .sidenav.show {
+    display: block;
+    margin-left: 40px;
+    width: 350px;
+    min-width: 350px;
+}
+
+@media (min-width: 1200px) {
+    .application .sidenav.show+.main-content {
+        max-width: calc(100% - 350px);
+        padding-left: 3px;
+    }
+}
+
+.left-sidbar button {
+    background-color: transparent;
+    color: black;
+    border: none;
+    outline: none;
+    height: 90px;
+    width: 90px;
+    margin: 5px 0;
+
+}
+
+button:focus {
+    outline: none !important;
+}
+
+
+.left-sidbar .active {
+    background: #212121;
+    color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 14px;
+}
+
+.left-sidbar p {
+    font-weight: 500;
+    font-size: 14px;
+    text-align: center;
+    line-height: 15px;
 }
